# S4A

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: SetCompilerWarnings.cmake
doc/: logger.md
include/common/: s4logger.h
source/common/: s4logger.cpp
test/: test_logger.cpp  test_perf_event_open.cpp  test_perf_papi.cpp
